@@ -13,13 +13,11 @@ import com.powsybl.iidm.network.test.FourSubstationsNodeBreakerFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
@@ -110,63 +108,37 @@ class ConnectGeneratorTest {
 
     @Test
     void testConnectGeneratorWithTransformers() {
-        Network network = Network.read("/testCase_with_transformers.xiidm", getClass().getResourceAsStream("/testCase_with_transformers.xiidm"));
+        Network networkWithTransformers = Network.read("/testCase_with_transformers.xiidm", getClass().getResourceAsStream("/testCase_with_transformers.xiidm"));
 
         // These generators are directly connected to main grid: it should remain that way
         List<String> generatorsInitiallyConnected = List.of("ESDCGU1 _generator", "ESDCGN1 _generator", "ESCTGU1 _generator", "ESCTGN1 _generator");
-        checkInitialStatusConnected(network, generatorsInitiallyConnected);
+        checkTerminalStatus(networkWithTransformers, generatorsInitiallyConnected, true, true);
 
         // These generators are directly connected to grid but its terminal is disconnected: they should be reconnected
         List<String> generatorsToConnectTerminal = List.of("ESDDGU1 _generator", "ESDDGN1 _generator");
-        checkInitalStatusTerminalDisconnected(network, generatorsToConnectTerminal);
+        checkTerminalStatus(networkWithTransformers, generatorsToConnectTerminal, false, true);
 
         // These generators are linked to grid through a line that is disconnected: it should remain that way
         List<String> generatorsRemainsDisconnectedToTheMainComponent = List.of("ESCDGU1 _generator", "ESCDGN1 _generator");
 
         // These generators are connected to grid through 2 transformers that are disconnected: they should be reconnected
         List<String> generatorsToConnectToTheMainComponent = List.of("ESD2GU1 _generator", "ESDTGU1 _generator", "ESD2GN1 _generator", "ESDTGN1 _generator");
-        checkInitialStatusDisconnected(network, Stream.concat(generatorsToConnectToTheMainComponent.stream(), generatorsRemainsDisconnectedToTheMainComponent.stream()).collect(Collectors.toList()));
+        checkTerminalStatus(networkWithTransformers, Stream.concat(generatorsToConnectToTheMainComponent.stream(), generatorsRemainsDisconnectedToTheMainComponent.stream()).collect(Collectors.toList()), false, false);
 
-        for (List<String> strings : Arrays.asList(generatorsInitiallyConnected, generatorsToConnectTerminal, generatorsToConnectToTheMainComponent, generatorsRemainsDisconnectedToTheMainComponent)) {
-            for (String id : strings) {
-                new ConnectGenerator(id).apply(network);
-            }
+        for (List<String> generatorsId : List.of(generatorsInitiallyConnected, generatorsToConnectTerminal, generatorsToConnectToTheMainComponent, generatorsRemainsDisconnectedToTheMainComponent)) {
+            generatorsId.forEach(generatorId -> new ConnectGenerator(generatorId).apply(networkWithTransformers));
         }
-        checkTerminalConnectedButNotInMain(network, generatorsRemainsDisconnectedToTheMainComponent);
-        checkInitialStatusConnected(network, generatorsInitiallyConnected);
-        checkInitialStatusConnected(network, Stream.concat(generatorsToConnectToTheMainComponent.stream(), generatorsToConnectTerminal.stream()).collect(Collectors.toList()));
+        checkTerminalStatus(networkWithTransformers, generatorsRemainsDisconnectedToTheMainComponent, true, false);
+        checkTerminalStatus(networkWithTransformers, generatorsInitiallyConnected, true, true);
+        checkTerminalStatus(networkWithTransformers, Stream.concat(generatorsToConnectToTheMainComponent.stream(), generatorsToConnectTerminal.stream()).collect(Collectors.toList()), true, true);
 
     }
 
-    private void checkTerminalConnectedButNotInMain(Network network, List<String> ids) {
+    private void checkTerminalStatus(Network network, List<String> ids, boolean shouldBeConnected, boolean shouldBeInMainSynchronousComponent) {
         ids.forEach(id -> {
             Generator gen = network.getGenerator(id);
-            assertTrue(gen.getTerminal().isConnected());
-            assertFalse(gen.getTerminal().getBusBreakerView().getConnectableBus().isInMainSynchronousComponent());
-        });
-    }
-
-    private void checkInitialStatusConnected(Network network, List<String> ids) {
-        ids.forEach(id -> {
-            Generator gen = network.getGenerator(id);
-            assertTrue(gen.getTerminal().isConnected());
-            assertTrue(gen.getTerminal().getBusBreakerView().getConnectableBus().isInMainSynchronousComponent());
-        });
-    }
-
-    private void checkInitialStatusDisconnected(Network network, List<String> ids) {
-        ids.forEach(id -> {
-            Generator gen = network.getGenerator(id);
-            assertFalse(gen.getTerminal().isConnected());
-            assertFalse(gen.getTerminal().getBusBreakerView().getConnectableBus().isInMainSynchronousComponent());
-        });
-    }
-
-    private void checkInitalStatusTerminalDisconnected(Network network, List<String> ids) {
-        ids.forEach(id -> {
-            Generator gen = network.getGenerator(id);
-            assertFalse(gen.getTerminal().isConnected());
-            assertTrue(gen.getTerminal().getBusBreakerView().getConnectableBus().isInMainSynchronousComponent());
+            assertEquals(shouldBeConnected, gen.getTerminal().isConnected());
+            assertEquals(shouldBeInMainSynchronousComponent, gen.getTerminal().getBusBreakerView().getConnectableBus().isInMainSynchronousComponent());
         });
     }
 
